SubBt/force-app/main/default/objects/Change_Order_Item__c/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <displayFormat>COL-{00000}</displayFormat>
    <label>All CO Line #</label>
    <type>AutoNumber</type>
</CustomField>