SubBt/force-app/main/default/objects/Change_Order_Item__c/fields/Change_Order__c.field-meta.xml
<CustomField>
    <fullName>Change_Order__c</fullName>
    <description>This field indicate the related change order</description>
    <inlineHelpText>Related Change Order</inlineHelpText>
    <label>Change Order</label>
    <referenceTo>Change_Order__c</referenceTo>
    <relationshipName>Change_Order_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>