SubBt/force-app/main/default/objects/Change_Order_Item__c/fields/CO_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>CO_Line_Number__c</fullName>
    <formula>&apos;COL-&apos;&amp; Change_Order__r.Auto_Number__c &amp;&apos;-&apos;&amp; Auto_Number1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CO Line #</label>
    <type>Text</type>
</CustomField>