SubBt/force-app/main/default/objects/Change_Order_Item__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <description>Change Order Item Name</description>
    <label>Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>