SubBt/force-app/main/default/objects/Change_Order_Item__c/fields/Purchase_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the PO Line that the CO Line is associated with.</inlineHelpText>
    <label>Purchase Order Line</label>
    <referenceTo>Purchase_Order_Item__c</referenceTo>
    <relationshipLabel>Change Order Lines</relationshipLabel>
    <relationshipName>Change_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>