SubBt/force-app/main/default/objects/Change_Order_Item__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>(1+Tax_Rate__c) *   ((SubTotal__c)+ (SubTotal__c *  Markup__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(SubTotal * Markup) * Tax Rate</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>