SubBt/force-app/main/default/objects/Change_Order_Item__c/fields/Unit_of_Measure_UOM__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure_UOM__c</fullName>
    <label>Unit of Measure (UOM)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Each</fullName>
            </value>
            <value>
                <fullName>Lump Sum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>