SubBt/force-app/main/default/objects/Change_Order_Item__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>Product Unit Cost</description>
    <inlineHelpText>Product Unit Cost</inlineHelpText>
    <label>Unit Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>