SubBt/force-app/main/default/objects/Change_Order_Item__c/fields/Unit_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Sales_Price__c</fullName>
    <formula>Unit_Price__c * (1+ Markup__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit Price plus Markup %.</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>