SubBt/force-app/main/default/objects/Change_Order_Item__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Change Order Lines</relationshipLabel>
    <relationshipName>Change_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>